add http interface

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,26 @@
             <version>6.8.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.6.6.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.hh.logging</groupId>
+            <artifactId>hh-java-logging</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 
     <build>
