force JVM to use UTF-8 encoding

--- a/src/etc/init/hh-correktor.conf
+++ b/src/etc/init/hh-correktor.conf
@@ -17,7 +17,7 @@ end script
 script
   DAEMON=/usr/bin/daemon
 
-  JVM_MEM="-Xmn80m -Xms160m -Xmx160m -Xss1481k -XX:SurvivorRatio=8"
+  JVM_MEM="-Xmn80m -Xms512m -Xmx512m -Xss1481k -XX:SurvivorRatio=8"
   JVM_GC=""
   JVM_OTHER="-server"
 
@@ -25,7 +25,7 @@ script
   if [ -n "$JAVA_HOME" ]; then JAVA=$JAVA_HOME/bin/java; fi
   JAVA="$JAVA $JVM_MEM $JVM_GC $JVM_OTHER"
 
-  CMD="$JAVA -DsettingsDir=/etc/hh-correktor/ -jar /usr/share/hh-correktor/hh-correktor.jar"
+  CMD="$JAVA -Dfile.encoding=UTF-8 -DsettingsDir=/etc/hh-correktor/ -jar /usr/share/hh-correktor/hh-correktor.jar"
 
   PID="/var/run/hh-correktor/hh-correktor.pid"
   LOG_OUT=/var/log/hh-correktor/stdout.log
