new dict + cfg parameters

--- a/src/etc/hh-correktor/settings.properties
+++ b/src/etc/hh-correktor/settings.properties
@@ -1,3 +1,6 @@
-concurrencyLevel=4
+concurrencyLevel=1
 port=6789
 timings.tolerance=1000
+
+correktor.lowLengthBound=4
+correktor.highLengthBound=30
